cmss/main/default/objects/MailServiceNotification__c/MailServiceNotification__c.object-meta.xml
<CustomObject>
    <label>MailServiceNotification</label>
    <nameField>
        <label>MailServiceNotification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MailServiceNotifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>