cmss/main/default/objects/MailServiceNotification__c/fields/DateSent__c.field-meta.xml
<CustomField>
    <fullName>DateSent__c</fullName>
    <label>DateSent</label>
    <type>DateTime</type>
</CustomField>