cmss/main/default/objects/MailServiceNotification__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>