cmss/main/default/objects/MailServiceNotification__c/fields/FromEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>FromEmailAddress__c</fullName>
    <label>FromEmailAddress</label>
    <type>Email</type>
</CustomField>