cmss/main/default/objects/MailServiceNotification__c/fields/NotSentDueToError__c.field-meta.xml
<CustomField>
    <fullName>NotSentDueToError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NotSentDueToError</label>
    <type>Checkbox</type>
</CustomField>