cmss/main/default/objects/MailServiceNotification__c/fields/SendAfter__c.field-meta.xml
<CustomField>
    <fullName>SendAfter__c</fullName>
    <label>SendAfter</label>
    <type>DateTime</type>
</CustomField>