cmss/main/default/objects/MailServiceNotification__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>