cmss/main/default/objects/MailServiceNotification__c/fields/ToEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ToEmailAddress__c</fullName>
    <label>ToEmailAddress</label>
    <type>Email</type>
</CustomField>